--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
          adipisci rerum quaerat officiis vel, officia, eum commodi? Commodi,
          impedit minus.
       </p>
+      <ul>
+         <li>Home</li>
+         <li>About us</li>
+         <li>Contact us</li>
+      </ul>
    </body>
 </html>
